[package]
name = "rink"
version = "0.1.0"
edition = "2021"
description = "A simple calculator plugin powered by Rink"
license = "GPLv3"
homepage = "https://github.com/anyrun-org/plugin-rink"
repository = "https://github.com/anyrun-org/plugin-rink"
readme = "README.md"
author = ["Kirottu"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
anyrun-plugin = "0.1.0"
reqwest = { version = "0.11.13", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rink-core = "0.6"
